v4.9.0/_sources/generated/pcdsdevices.sample_delivery.ManifoldValve.rst.txt
pcdsdevices.sample\_delivery.ManifoldValve
==========================================

.. currentmodule:: pcdsdevices.sample_delivery

.. autoclass:: ManifoldValve

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - open
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:Open``
          - 
          - normal
          - 
    
        * - open_do
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:OpenDO``
          - 
          - normal
          - 
    
        * - open_sw
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:OpenSW``
          - 
          - normal
          - 
    
        * - interlocked
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:Ilk``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    